# BachelorSimulation

./: .gitignore  Info.txt  README.md  radar_world.launch
Data/Messages/: complexWorld.txt  complexWorld_drive.txt  humanWithWall.txt  soloHuman.txt
Data/Threshold_Test/: threshold_001.txt  threshold_1.txt  threshold_100.txt  threshold_10000.txt
Data/Time/: complexWorld_time.txt  emptyWorld_time.txt  humanWithWall_time.txt  soloHuman_time.txt
Data/noisePower/: noise_0000001.txt  noise_001.txt  noise_1.txt
Data/time/: complexWorld_time.txt  emptyWorld_time.txt  humanWithWall_time.txt  soloHuman_time.txt
Gazebo/: Radar_Simulation.world
Gazebo/Tutorial_Plugin/: CMakeLists.txt  hello_world.cpp
Gazebo/models/: database.config
Gazebo/models/box/: model.sdf
Gazebo/models/ground_plane/: model.config  model.sdf
Gazebo/models/human_body/: model.config  model.sdf
Gazebo/models/vital_radar/: model.config  model.sdf
Gazebo/plugins/respi_rate/: CMakeLists.txt  respi_rate.cpp
Gazebo/plugins/vital_radar/: CMakeLists.txt  vital_radar.cpp  vital_radar.hh
Gazebo/plugins/vital_radar/includes/: vital_radar.hh
